--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="apikeys.js"></script>
-    <title>Document</title>
+    <script src="js/script.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <title>Flickr - API</title>
   </head>
   <body></body>
 </html>
