--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <title>Flickr - API</title>
   </head>
-  <body></body>
+  <body>
+    
+  </body>
 </html>
