Added base elements in html

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <title>Flickr - API</title>
   </head>
   <body>
-    <div id="imgContainer">
-
+    <div class="wrapper">
+      <div class="search-bar"></div>
+      <div id="pagination"></div>
+      <div id="imgContainer"></div>
     </div>
   </body>
 </html>
