--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,7 +11,7 @@
   <body>
     <div class="wrapper">
       <div id="search-form">
-        <input type="text" id="search-box" placeholder="Search photos">
+        <input type="text" id="search-box" placeholder="Search photos" />
         <button id="submit">Search</button>
       </div>
       <div id="paginationContainer">
@@ -30,12 +29,8 @@
       </div>
       <div id="imgContainer"></div>
 
+      <div id="pagination"></div>
+      <div id="imgContainer"></div>
     </div>
-
-
-    <div id="pagination"></div>
-    <div id="imgContainer"></div>
-  </div>
-</body>
-
+  </body>
 </html>
