added form tag to searchForm, and restructured our image load with a new function

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
   <body>
     <div class="wrapper">
       <div id="search-form">
-        <input type="text" id="search-box" placeholder="Search photos" />
-        <button id="submit">Search</button>
+        <form>
+          <input type="text" id="search-box" placeholder="Search photos"/>
+          <button id="submit">Search</button>
+        </form>
       </div>
       <div id="paginationContainer">
         <button id="button-first-page" class="button-page">First</button>
