Replaced search with a search icon and added a folder for images

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
       <div id="search-form">
         <input type="text" id="search-box" placeholder="Search photos" />
-        <button id="submit">Search</button>
+        <button id="submit"><img src="images/search-icon.png" alt="search-icon"></button>
       </div>
       <div id="paginationContainer">
         <button id="button-first-page" class="button-page">First</button>
