--- a/index.html
+++ b/index.html
@@ -11,24 +11,17 @@
   <body>
     <div class="wrapper">
       <div id="search-form">
-        <input type="text" id="search-box" placeholder="Search photos" />
-        <button id="submit">Search</button>
+        <form>
+          <input type="text" id="search-box" placeholder="Search photos" />
+          <button id="submit">Search</button>
+        </form>
       </div>
       <div id="paginationContainer">
-        <button id="button-first-page" class="button-page">First</button>
-        <button id="button-prev-page" class="button-page">Prev</button>
-        <ul class="page-list">
-          <li class="page-list__item">4</li>
-          <li class="page-list__item">5</li>
-          <li class="page-list__item">6</li>
-          <li class="page-list__item">7</li>
-          <li class="page-list__item">8</li>
-        </ul>
-        <button id="button-next-page" class="button-page">Next</button>
-        <button id="button-last-page" class="button-page">Last</button>
+        <button id="button-prev-page" class="button-page">&lt;</button>
+        <ul class="page-list"></ul>
+        <button id="button-next-page" class="button-page">&gt;</button>
       </div>
       <div id="imgContainer"></div>
-
       <div id="pagination"></div>
       <div id="imgContainer"></div>
     </div>
