--- a/index.html
+++ b/index.html
@@ -10,9 +10,23 @@
   </head>
   <body>
     <div class="wrapper">
+      <!-- Denna ska inte vara här, men ville inte 
+      ta beslut om placering så lade den högst upp -->
+      <section class="select-container">
+        <select class="img-per-page">
+          <option value="20" selected>20</option>
+          <option value="50">50</option>
+          <option value="75">75</option>
+          <option value="100">100</option>
+        </select>
+        <span class="select-arrow"></span>
+      </section>
+      <!-- Slut på select-delen -->
       <form id="search-form">
         <input type="text" id="search-box" placeholder="Search photos" />
-        <button id="submit"><img src="images/search-icon.png" alt="search-icon"></button>
+        <button id="submit">
+          <img src="images/search-icon.png" alt="search-icon" />
+        </button>
       </form>
       <div id="paginationContainer">
         <button id="button-prev-page" class="button-page">&lt;</button>
