Added functionality to lightbox, added id to lightbox container, changed style and classes for lightbox navigation arrows

--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
     <div id="pagination"></div>
     <div id="imgContainer"></div>
   </div>
-  <section class="lightbox">
+  <section class="lightbox" id="lightbox-effect">
     <div class="lightbox__main">
-      <div>
-        <svg id="prevArrow" class="lightbox__arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+      <div class="lightbox__arrow-container" id="prevArrow">
+        <svg class="lightbox__arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
           <title>chevron-left</title>
           <path d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z" />
         </svg>
       </div>
       <img id="lightboxPhoto" src="https://farm66.staticflickr.com/65535/53523280572_18140da214_b.jpg" alt="monkeyMan">
-      <div>
-        <svg id="nextArrow" class="lightbox__arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+      <div class="lightbox__arrow-container" id="nextArrow">
+        <svg class="lightbox__arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
           <title>chevron-right</title>
           <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" />
         </svg>
