Basic layout upgrade

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           id="search-box"
           placeholder="Search photos"
         />
-        <button id="submit">
+        <button class="search-button" id="submit">
           <img src="images/search-icon.png" alt="search-icon" />
         </button>
       </form>
