Added cursor pointer to the images

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         class="search-box"
         type="text"
         id="search-box"
-        placeholder="Search photos"
+        placeholder="Search photos on Flickr"
       />
       <button class="search-button" id="submit">
         <img src="images/search-icon.png" alt="search-icon" />
