--- a/index.html
+++ b/index.html
@@ -8,63 +8,52 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <title>Flickr - API</title>
   </head>
-<body>
-  <header class="flickr-header">
-    <form class="search-form" id="search-form">
-      <input
-        class="search-box"
-        type="text"
-        id="search-box"
-        placeholder="Search photos on Flickr"
-      />
-      <button class="search-button" id="submit">
-        <img src="images/search-icon.png" alt="search-icon" />
-      </button>
-    </form>
-    <section class="select-container">
-      <select class="img-per-page">
-        <option value="20" selected>20 per page</option>
-        <option value="50">50 per page</option>
-        <option value="75">75 per page</option>
-        <option value="100">100 per page</option>
-      </select>
-      <span class="select-arrow"></span>
-    </section>
-    <!-- Slut på select-delen -->
-  </header>
-  <div class="wrapper">
-
-    <div id="paginationContainer">
-      <button id="button-prev-page" class="button-page">&lt;</button>
-      <ul class="page-list"></ul>
-      <button id="button-next-page" class="button-page">&gt;</button>
-    </div>
-    <div id="pagination"></div>
-    <div id="imgContainer"></div>
-  </div>
-  <section class="lightbox" id="lightbox-effect">
-    <div class="lightbox__main">
-      <div class="lightbox__arrow-container" id="prevArrow">
-        <svg class="lightbox__arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-          <title>chevron-left</title>
-          <path d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z" />
-        </svg>
-      </div>
-      <img id="lightboxPhoto" src="https://farm66.staticflickr.com/65535/53523280572_18140da214_b.jpg" alt="monkeyMan">
-      <div class="lightbox__arrow-container" id="nextArrow">
-        <svg class="lightbox__arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-          <title>chevron-right</title>
-          <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" />
-        </svg>
-      </div>
-    </div>
-    <div class="lightbox__thumbnail" id="lightboxThumbnail">
-    </div>
-    <section class="lightbox">
-      <div class="lightbox__main">
-        <div>
+  <body>
+    <header class="flickr-header">
+      <form class="search-form" id="search-form">
+        <input
+          class="search-box"
+          type="text"
+          id="search-box"
+          placeholder="Search photos on Flickr"
+        />
+        <button class="search-button" id="submit">
           <svg
-            id="prevArrow"
+            class="search-icon"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+          >
+            <title>magnify</title>
+            <path
+              d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
+            />
+          </svg>
+        </button>
+      </form>
+      <section class="select-container">
+        <select class="img-per-page">
+          <option value="20" selected>20 per page</option>
+          <option value="50">50 per page</option>
+          <option value="75">75 per page</option>
+          <option value="100">100 per page</option>
+        </select>
+        <span class="select-arrow"></span>
+      </section>
+      <!-- Slut på select-delen -->
+    </header>
+    <div class="wrapper">
+      <div id="paginationContainer">
+        <button id="button-prev-page" class="button-page">&lt;</button>
+        <ul class="page-list"></ul>
+        <button id="button-next-page" class="button-page">&gt;</button>
+      </div>
+      <div id="pagination"></div>
+      <div id="imgContainer"></div>
+    </div>
+    <section class="lightbox" id="lightbox-effect">
+      <div class="lightbox__main">
+        <div class="lightbox__arrow-container" id="prevArrow">
+          <svg
             class="lightbox__arrow-icon"
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 24 24"
@@ -80,9 +69,8 @@
           src="https://farm66.staticflickr.com/65535/53523280572_18140da214_b.jpg"
           alt="monkeyMan"
         />
-        <div>
+        <div class="lightbox__arrow-container" id="nextArrow">
           <svg
-            id="nextArrow"
             class="lightbox__arrow-icon"
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 24 24"
